--- a/view/ranking_view.mustache
+++ b/view/ranking_view.mustache
@@ -1,1 +1,34 @@
-<h1>Ranking</h1>
+{{> header}}
+<div class="flex flex-col justify-center items-center w-full h-screen">
+    <h1 class="font-bold text-5xl text-center text-indigo-700">Ranking de jugadores</h1>
+    <div class="bg-white p-8 rounded-lg shadow-lg mt-8">
+        <div class="w-full border-b border-gray-200 shadow">
+            <table class="w-full divide-y divide-indigo-700 ">
+                <thead class="bg-gray-50">
+                <tr>
+                    <th class="text-center text-md px-6 py-2 text-gray-500">Posición</th>
+                    <th class="text-center text-md px-6 py-2 text-gray-500">Nombre</th>
+                    <th class="text-center text-md px-6 py-2 text-gray-500">Respuestas</th>
+                </tr>
+                </thead>
+                <tbody class="bg-white divide-y divide-gray-300">
+                <tr class="whitespace-nowrap">
+                    <td class="px-6 py-4 text-center text-md text-gray-900">1</td>
+                    <td class="px-6 py-4 text-center text-md text-gray-500">Alexis Enache</td>
+                    <td class="px-6 py-4 text-center text-md text-gray-500">25</td>
+                </tr>
+                <tr class="whitespace-nowrap">
+                    <td class="px-6 py-4 text-center text-md text-gray-900">2</td>
+                    <td class="px-6 py-4 text-center text-md text-gray-500">Alexis Enache</td>
+                    <td class="px-6 py-4 text-center text-md text-gray-500">15</td>
+                </tr>
+                <tr class="whitespace-nowrap">
+                    <td class="px-6 py-4 text-center text-md text-gray-900">3</td>
+                    <td class="px-6 py-4 text-center text-md text-gray-500">Alexis Enache</td>
+                    <td class="px-6 py-4 text-center text-md text-gray-500">10</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
