Cambiado el url base
Ahora el url base ya no es htdocs, sino que es TpFinal, y de ahi andan todas las paginas

--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -8,24 +8,24 @@
                     <p class="text-2xl leading-6 text-white">Juego de preguntas</p>
                 </div>
                 <div class="flex flex-col justify-center items-center p-6 border-b border-gray-600 w-full">
-                    <a href="/crearPartida/list"
+                    <a href="crearPartida/list"
                        class="flex items-center hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2 w-full md:w-52">
                         <i class="w-1/5 text-center fa-solid fa-plus"></i>
                         <p class="w-4/5 text-base">Crear partida</p>
                     </a>
-                    <a href="/crearPregunta/list"
+                    <a href="crearPregunta/list"
                        class="flex items-center hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2 w-full md:w-52">
                         <i class="w-1/5 text-center fa-solid fa-question"></i>
                         <p class="w-4/5 text-base">Crear pregunta</p>
                     </a>
-                    <a href="/ranking/list"
+                    <a href="ranking/list"
                        class="flex items-center hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2 w-full md:w-52">
                         <i class="w-1/5 text-center fa-solid fa-ranking-star"></i>
                         <p class="w-4/5 text-base">Ranking</p>
                     </a>
                 </div>
                 <div class="w-full flex items-center p-6 space-x-4">
-                    <a href="/perfilJugador/list"
+                    <a href="perfilJugador/list"
                        class="flex items-center hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2 w-full md:w-52">
                         <img class="w-12 rounded-full" src="https://i.ibb.co/L1LQtBm/Ellipse-1.png" alt="avatar">
                         <p class="cursor-pointer text-md leading-5 text-white">Alexis Enache</p>
