--- a/view/formRegistro_view.mustache
+++ b/view/formRegistro_view.mustache
@@ -14,7 +14,10 @@
             <!-- Col -->
             <div class="w-full lg:w-7/12 bg-white p-5 rounded-lg lg:rounded-l-none">
                 <h3 class="pt-4 text-2xl text-center">Crea una cuenta!</h3>
-                <form class="px-8 pt-6 pb-8 mb-4 bg-white rounded">
+                <form class="px-8 pt-6 pb-8 mb-4 bg-white rounded" id="form-registro"
+                      action="registrar"
+                      method="POST"
+                      enctype="multipart/form-data">
                     <div class="mb-4 md:flex md:justify-between">
                         <div class="mb-4 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="nombre">
@@ -22,7 +25,7 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="nombre"
+                                    id="nombre" name="nombre"
                                     type="text"
                                     placeholder="Nombre"
                             />
@@ -33,13 +36,12 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="apellido"
+                                    id="apellido" name="apellido"
                                     type="text"
                                     placeholder="Apellido"
                             />
                         </div>
                     </div>
-
 
 
                     <div class="mb-4 md:flex md:justify-between">
@@ -49,7 +51,7 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="username"
+                                    id="username" name="username"
                                     type="text"
                                     placeholder="Nombre de usuario"
                             />
@@ -60,14 +62,13 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="localidad"
+                                    id="localidad" name="localidad"
                                     type="text"
                                     placeholder="Pais y ciudad"
 
                             />
                         </div>
                     </div>
-
 
 
                     <div class="mb-4 md:flex md:justify-between">
@@ -77,7 +78,7 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="sexo"
+                                    id="sexo" name="sexo"
                                     type="text"
                                     placeholder="Sexo"
                             />
@@ -88,7 +89,7 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="fnacimiento"
+                                    id="fnacimiento" name="fnacimiento"
                                     type="number"
                                     placeholder="Año de Nacimiento"
 
@@ -97,20 +98,13 @@
                     </div>
 
 
-
-
-
-
-
-
-
                     <div class="mb-4">
                         <label class="block mb-2 text-sm font-bold text-gray-700" for="email">
                             Email
                         </label>
                         <input
                                 class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                id="email"
+                                id="email" name="email"
                                 type="email"
                                 placeholder="Email"
                         />
@@ -122,7 +116,7 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="password"
+                                    id="password" name="password"
                                     type="password"
                                     placeholder="******************"
                             />
@@ -134,7 +128,7 @@
                             </label>
                             <input
                                     class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
-                                    id="cpassword"
+                                    id="cpassword" name="cpassword"
                                     type="password"
                                     placeholder="******************"
                             />
@@ -146,11 +140,13 @@
 
                         <div class="flex items-center shadow-md space-x-6 bg-white p-3 rounded-md">
                             <div class="shrink-0">
-                                <img class="h-16 w-16 object-cover rounded-full" src="https://ik.imagekit.io/ktdjfymfk/pexels-pixabay-164595__2__tD_vGRYs2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1654163121780" alt="s" />
+                                <img class="h-16 w-16 object-cover rounded-full"
+                                     src="https://ik.imagekit.io/ktdjfymfk/pexels-pixabay-164595__2__tD_vGRYs2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1654163121780"
+                                     alt="s"/>
                             </div>
                             <label class="block">
                                 <span class="sr-only">Choose profile photo</span>
-                                <input type="file" class="block w-full text-sm text-slate-500
+                                <input type="file" name="fotoPerfil" class="block w-full text-sm text-slate-500
         file:mr-4 file:py-2 file:px-4
         file:rounded-full file:border-0
         file:text-sm file:font-semibold
@@ -166,12 +162,12 @@
                     <div class="mb-6 text-center">
                         <button
                                 class="w-full px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline"
-                                type="button"
+                                type="submit"
                         >
                             Registrarse
                         </button>
                     </div>
-                    <hr class="mb-6 border-t" />
+                    <hr class="mb-6 border-t"/>
 
                     <div class="text-center">
                         <a
