--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -1,4 +1,9 @@
 {{> header}}
+{{#usuario}}
+    <tr>
+        <td>{{nombre}}</td>
+    </tr>
+{{/usuario}}
 <div class="flex w-full h-screen justify-center items-center">
     <div class="w-4/5 p-3">
         <div class="bg-white rounded-lg shadow-lg w-full mt-8 flex">
