--- a/view/partial/header.mustache
+++ b/view/partial/header.mustache
@@ -6,7 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Juego de preguntas</title>
+
     <script src="https://cdn.tailwindcss.com"></script>
+
     <script src="https://kit.fontawesome.com/f46e1e1d56.js" crossorigin="anonymous"></script>
+    <link href="https://unicons.iconscout.com/release/v2.1.9/css/unicons.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="../public/estilos/style.css">
 </head>
 <body class="antialiased text-gray-700 bg-gray-100">
