--- a/view/login_view.mustache
+++ b/view/login_view.mustache
@@ -12,24 +12,30 @@
                     <label class="block mb-2 text-sm font-bold" for="username">
                         Username
                     </label>
-                    <input type="text" id="username" name="username" class="w-full p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline" placeholder="Username" />
+                    <input type="text" id="username" name="username"
+                           class="w-full p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline"
+                           placeholder="Username"/>
                 </div>
                 <div class="mb-4">
                     <label class="block mb-2 text-sm font-bold" for="password">
                         Password
                     </label>
-                    <input type="password" id="password" name="password" class="w-full p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline" placeholder="***********" />
+                    <input type="password" id="password" name="password"
+                           class="w-full p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline"
+                           placeholder="***********"/>
                 </div>
                 <div class="mb-4">
-                    <button class="w-full p-3 font-bold text-white bg-red-500 rounded-full focus:outline-none" type="submit">
+                    <button class="w-full p-3 font-bold text-white bg-red-500 rounded-full focus:outline-none"
+                            type="submit">
                         Sign In
                     </button>
                 </div>
-                <hr class="mb-4 border-t" />
-                <div class="text-sm text-center">
-                    <a href="#">Create an Account</a>
-                    <a href="#" class="text-blue-500 pl-2">Forgot Password ?</a>
-                </div>
+                <hr class="mb-4 border-t"/>
+                {{#msj}}
+                    <span class="text-sm text-center bg-red-500 text-white px-4 py-2 rounded">
+                        el usuario o contraseña es incorrecto
+                    </span>
+                {{/msj}}
             </form>
         </div>
     </div>
