cambio de estilo en la view login

--- a/view/login_view.mustache
+++ b/view/login_view.mustache
@@ -2,10 +2,10 @@
 <div class="bg-gray-200 h-screen overflow-hidden flex items-center justify-center">
     <div class="w-10/12 lg:w-9/12 xl:w-7/12 flex">
         <div class="w-full h-auto hidden lg:block lg:w-1/2 bg-cover rounded-lg lg:rounded-r-none"
-             style="background-image: url('https://images.pexels.com/photos/33999/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260')">
+             style="background-image: url('https://mlqfdkzc0cug.i.optimole.com/w:auto/h:auto/q:mauto/f:avif/https://humanit.as/experiences/wp-content/uploads/sites/7/2015/12/Question-Mark-HD-Wallpaper15.jpg')">
         </div>
         <div class="w-full lg:w-1/2 bg-white rounded-lg lg:rounded-l-none py-24 px-12">
-            <h3 class="font-bold text-3xl text-red-600 text-center tracking-widest uppercase mb-4">Login</h3>
+            <h3 class="font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase mb-4">Login</h3>
 
             <form class="bg-white" method="POST" action="loguearse">
                 <div class="mb-4">
@@ -25,7 +25,7 @@
                            placeholder="***********"/>
                 </div>
                 <div class="mb-4">
-                    <button class="w-full p-3 font-bold text-white bg-red-500 rounded-full focus:outline-none"
+                    <button class="w-full p-3 font-bold text-white bg-indigo-600 rounded-full focus:outline-none"
                             type="submit">
                         Sign In
                     </button>
