--- a/view/login_view.mustache
+++ b/view/login_view.mustache
@@ -7,7 +7,7 @@
         <div class="w-full lg:w-1/2 bg-white rounded-lg lg:rounded-l-none py-24 px-12">
             <h3 class="font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase mb-4">Login</h3>
 
-            <form class="bg-white" method="POST" action="loguearse">
+            <form class="bg-white" method="POST" action="validarLogin">
                 <div class="mb-4">
                     <label class="block mb-2 text-sm font-bold" for="username">
                         Username
