--- a/view/perfilJugador_view.mustache
+++ b/view/perfilJugador_view.mustache
@@ -1,27 +1,40 @@
 {{> header}}
-<div class="w-full h-screen flex flex-col justify-center">
-    <div class="bg-gray-200 rounded-lg p-6 flex flex-col md:flex-row">
-        <div class="md:w-1/2 flex items-center justify-center mb-4 md:mb-0">
-            <img src="https://i.ibb.co/L1LQtBm/Ellipse-1.png" alt="Foto de perfil" class="w-40 h-40 rounded-full">
-        </div>
-        <div class="md:w-1/2 md:ml-6">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-2">Alexis</h2>
-            <p class="text-gray-600 mb-2">Posición en el ranking: 1</p>
-            <p class="text-gray-600 mb-2">Puntaje: 100</p>
-            <p class="text-gray-600 mb-2">Partidas: 2423</p>
-            <div class="flex items-center">
-                <img src="https://borealtech.com/wp-content/uploads/2018/10/codigo-qr-1024x1024-1.jpg"
-                     alt="Foto del código QR" class="w-24 h-24">
+{{#usuario}}
+
+    <div class="flex flex-col justify-center items-center w-full h-screen">
+        <div class="w-full max-w-md mx-auto p-8 bg-white rounded shadow-lg">
+            <div class="md:flex ">
+                <div class="md:w-1/2 flex justify-center items-center">
+                    <!-- Foto de perfil -->
+                    <img src="https://i.ibb.co/L1LQtBm/Ellipse-1.png" alt="Foto de perfil" class="w-32 h-32 rounded-full object-cover">
+                </div>
+                <div class="md:w-1/2 flex justify-center items-center">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Commons_QR_code.png" alt="Código QR" class="w-32 h-32">
+                </div>
+            </div>
+
+            <h2 class="text-xl text-center mt-4 font-bold">Nombre de usuario</h2>
+            <div class="flex justify-between mt-6">
+                <!-- Puntaje -->
+                <div>
+                    <p class="text-gray-600">Puntaje:</p>
+                    <p class="text-2xl font-bold">100</p>
+                </div>
+                <!-- Puntaje2 -->
+                <div>
+                    <p class="text-gray-600">Puntaje2:</p>
+                    <p class="text-2xl font-bold">200</p>
+                </div>
+            </div>
+
+            <!-- Mapa -->
+            <div class="mt-6">
+                <h3 class="text-lg font-bold">Ubicación</h3>
+                <div id="map" class=" h-40"></div>
             </div>
         </div>
     </div>
-    <div class="bg-gray-200 rounded-lg p-6 flex flex-col md:flex-row justify-center items-center">
-        <div class="md:w-3/4 md:ml-6 ">
-            <p class="text-gray-600">Mapa:</p>
-            <div id="map" class="h-64 rounded-lg"></div>
-        </div>
-    </div>
-</div>
+
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvZj61EiOcl1RlGGo3dt9u2OpyqqYkohk"></script>
 <script>
     function initMap() {
@@ -47,3 +60,4 @@
         initMap();
     };
 </script>
+{{/usuario}}
