--- a/view/perfilJugador_view.mustache
+++ b/view/perfilJugador_view.mustache
@@ -13,17 +13,17 @@
                 </div>
             </div>
 
-            <h2 class="text-xl text-center mt-4 font-bold">Nombre de usuario</h2>
+            <h2 class="text-xl text-center mt-4 font-bold">{{nombre}} {{apellido}}</h2>
             <div class="flex justify-between mt-6">
                 <!-- Puntaje -->
                 <div>
-                    <p class="text-gray-600">Puntaje:</p>
-                    <p class="text-2xl font-bold">100</p>
+                    <p class="text-gray-600">Puntaje final:</p>
+                    <p class="text-2xl font-bold">NhN</p>
                 </div>
                 <!-- Puntaje2 -->
                 <div>
-                    <p class="text-gray-600">Puntaje2:</p>
-                    <p class="text-2xl font-bold">200</p>
+                    <p class="text-gray-600">Partidas realizadas:</p>
+                    <p class="text-2xl font-bold">NhN</p>
                 </div>
             </div>
 
