Se agrego la foto desde el usuario logeado

--- a/view/perfilJugador_view.mustache
+++ b/view/perfilJugador_view.mustache
@@ -6,7 +6,7 @@
             <div class="md:flex ">
                 <div class="md:w-1/2 flex justify-center items-center">
                     <!-- Foto de perfil -->
-                    <img src="https://i.ibb.co/L1LQtBm/Ellipse-1.png" alt="Foto de perfil" class="w-32 h-32 rounded-full object-cover">
+                    <img src="../public/{{foto_perfil}}" alt="Foto de perfil" class="w-32 h-32 rounded-full object-cover">
                 </div>
                 <div class="md:w-1/2 flex justify-center items-center">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/d/d7/Commons_QR_code.png" alt="Código QR" class="w-32 h-32">
