--- a/view/lobby_view.mustache
+++ b/view/lobby_view.mustache
@@ -29,8 +29,8 @@
                 <div class="w-full flex items-center p-6 space-x-4">
                     <a href="lobby/perfilJugador/getPerfil?idUsuario={{id}}"
                        class="flex items-center hover:text-white focus:bg-gray-700 focus:text-white hover:bg-gray-700 text-gray-400 rounded px-3 py-2 w-full md:w-52">
-                        <img class="w-12 rounded-full" src="https://i.ibb.co/L1LQtBm/Ellipse-1.png" alt="avatar">
-                        <p class="cursor-pointer text-md leading-5 text-white">{{nombre}} {{apellido}}</p>
+                        <img class="w-12 rounded-full" src="../public/{{foto_perfil}}" alt="avatar">
+                        <p class="cursor-pointer text-md leading-5 text-white ml-2">  {{nombre}} {{apellido}}</p>
                     </a>
                 </div>
             </div>
