--- a/view/formRegistro_view.mustache
+++ b/view/formRegistro_view.mustache
@@ -13,7 +13,7 @@
             ></div>
             <!-- Col -->
             <div class="w-full lg:w-7/12 bg-white p-5 rounded-lg lg:rounded-l-none">
-                <h3 class="pt-4 text-2xl text-center">Crea una cuenta!</h3>
+                <h3 class="pt-4 text-2xl text-center">Creá una cuenta!</h3>
                 <form class="px-8 pt-6 pb-8 mb-4 bg-white rounded" id="form-registro"
                       action="registrar"
                       method="POST"
@@ -58,7 +58,7 @@
                         </div>
                         <div class="md:ml-2">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="localidad">
-                                Pais y Ciudad
+                                País y Ciudad
                             </label>
                             <input
                                     class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
@@ -124,7 +124,7 @@
                         </div>
                         <div class="md:ml-2">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="cpassword">
-                                Contraseña
+                                Repetir contraseña
                             </label>
                             <input
                                     class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
@@ -170,11 +170,8 @@
                     <hr class="mb-6 border-t"/>
 
                     <div class="text-center">
-                        <a
-                                class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800"
-                                href="./index.html"
-                        >
-                            Ya tienes cuenta? Logueate
+                        <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="/tpfinal/login/list">
+                            ¿Ya tenés una cuenta? Iniciá sesión
                         </a>
                     </div>
                 </form>
