--- a/view/formRegistro_view.mustache
+++ b/view/formRegistro_view.mustache
@@ -15,7 +15,7 @@
             <div class="w-full lg:w-7/12 bg-white p-5 rounded-lg lg:rounded-l-none">
                 <h3 class="pt-4 text-2xl text-center">Creá una cuenta!</h3>
                 <form class="px-8 pt-6 pb-8 mb-4 bg-white rounded" id="form-registro"
-                      action="registrar"
+                      action="confirmarMail"
                       method="POST"
                       enctype="multipart/form-data">
                     <div class="mb-4 md:flex md:justify-between">
