Verificación de cuenta por correo electrónico. Enrutamientos. SSesión de usuario para envíar datos a las vistas

--- a/view/perfilJugador_view.mustache
+++ b/view/perfilJugador_view.mustache
@@ -5,7 +5,7 @@
             <img src="https://i.ibb.co/L1LQtBm/Ellipse-1.png" alt="Foto de perfil" class="w-40 h-40 rounded-full">
         </div>
         <div class="md:w-1/2 md:ml-6">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-2">Alexis</h2>
+            <h2 class="text-2xl font-semibold text-gray-800 mb-2">{{usuario.nombre}}</h2>
             <p class="text-gray-600 mb-2">Posición en el ranking: 1</p>
             <p class="text-gray-600 mb-2">Puntaje: 100</p>
             <p class="text-gray-600 mb-2">Partidas: 2423</p>
