--- a/view/formRegistro_view.mustache
+++ b/view/formRegistro_view.mustache
@@ -2,24 +2,23 @@
 <!-- component -->
 <body class="font-mono bg-gray-400">
 <!-- Container -->
-<div class="container mx-auto">
-    <div class="flex justify-center px-6 my-12">
+<div class="flex items-center justify-center h-screen">
         <!-- Row -->
-        <div class="w-full xl:w-3/4 lg:w-11/12 flex">
+        <div class="flex w-full md:w-3/4 2xl:w-1/2">
             <!-- Col -->
             <div
                     class="w-full h-auto bg-gray-400 hidden lg:block lg:w-5/12 bg-cover rounded-l-lg"
                     style="background-image: url('https://cdn.aarp.net/content/dam/aarp/health/healthy-living/2022/04/1140-paper-word-bubbles-question-marks-esp.jpg')"
             ></div>
             <!-- Col -->
-            <div class="w-full lg:w-7/12 bg-white p-5 rounded-lg lg:rounded-l-none">
-                <h3 class="pt-4 text-2xl text-center">Creá una cuenta!</h3>
-                <form class="px-8 pt-6 pb-8 mb-4 bg-white rounded" id="form-registro"
+            <div class="w-full lg:w-7/12 bg-white 2xl:p-6 rounded-lg lg:rounded-l-none">
+                <h3 class="p-3 font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase">¡Creá una cuenta!</h3>
+                <form class="px-8 2xl:p-10 mb-2 bg-white rounded" id="form-registro"
                       action="registrar"
                       method="POST"
                       enctype="multipart/form-data">
-                    <div class="mb-4 md:flex md:justify-between">
-                        <div class="mb-4 md:mr-2 md:mb-0">
+                    <div class="mb-2 md:flex md:justify-between">
+                        <div class="mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="nombre">
                                 Nombre
                             </label>
@@ -44,8 +43,8 @@
                     </div>
 
 
-                    <div class="mb-4 md:flex md:justify-between">
-                        <div class="mb-4 md:mr-2 md:mb-0">
+                    <div class="mb-2 md:flex md:justify-between">
+                        <div class="mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="username">
                                 Nombre de Usuario
                             </label>
@@ -71,8 +70,8 @@
                     </div>
 
 
-                    <div class="mb-4 md:flex md:justify-between">
-                        <div class="mb-4 md:mr-2 md:mb-0">
+                    <div class="mb-2 md:flex md:justify-between">
+                        <div class="mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="sexo">
                                 Sexo
                             </label>
@@ -98,7 +97,7 @@
                     </div>
 
 
-                    <div class="mb-4">
+                    <div class="mb-2">
                         <label class="block mb-2 text-sm font-bold text-gray-700" for="email">
                             Email
                         </label>
@@ -109,8 +108,8 @@
                                 placeholder="Email"
                         />
                     </div>
-                    <div class="mb-4 md:flex md:justify-between">
-                        <div class="mb-4 md:mr-2 md:mb-0">
+                    <div class="mb-2 md:flex md:justify-between">
+                        <div class="mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="password">
                                 Contraseña
                             </label>
@@ -159,24 +158,22 @@
                     </div>
 
 
-                    <div class="mb-6 text-center">
+                    <div class="text-center">
                         <button
-                                class="w-full px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline"
+                                class="w-full my-2 px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline"
                                 type="submit"
                         >
                             Registrarse
                         </button>
                     </div>
-                    <hr class="mb-6 border-t"/>
-
-                    <div class="text-center">
-                        <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="/tpfinal/login/list">
-                            ¿Ya tenés una cuenta? Iniciá sesión
-                        </a>
-                    </div>
                 </form>
+                <hr class="mb-3 border-t"/>
+                <div class="text-center py-2">
+                    <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="/tpfinal/login/list">
+                        ¿Ya tenés una cuenta? Iniciá sesión
+                    </a>
+                </div>
             </div>
         </div>
-    </div>
 </div>
 </body>
