--- a/view/home_view.mustache
+++ b/view/home_view.mustache
@@ -1,13 +1,12 @@
 {{> header}}
-
 <div class="bg-gray-200 h-screen overflow-hidden flex items-center justify-center">
-    <div class="w-10/12 lg:w-9/12 xl:w-7/12 flex">
+    <div class="w-5/6 lg:w-4/5 xl:w-7/12 flex">
         <div class="w-full h-auto hidden lg:block lg:w-1/2 bg-cover rounded-lg lg:rounded-r-none"
              style="background-image: url('https://media.istockphoto.com/id/471889448/vector/education-seamless-pattern.jpg?s=612x612&w=0&k=20&c=9mlQuFWKsS4EQ6YK3HQcHYNKVWqUzY3evTWwKdYYV54=')">
         </div>
-        <div class="w-full lg:w-1/2 bg-white rounded-lg lg:rounded-l-none p-12 flex flex-col justify-between">
-            <h3 class="font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase my-4">Título</h3>
-            <p class="text-lg mx-auto my-10">¡Bienvenido! Para empezar a jugar, iniciá sesión con tu cuenta. Si no tenés una, podés crearla y comenzar a jugar.</p>
+        <div class="w-full lg:w-1/2 bg-white rounded-lg lg:rounded-l-none p-6 lg:p-12 flex flex-col justify-between">
+            <h3 class="font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase my-4">QUIZ TIME</h3>
+            <p class="text-lg mx-auto my-10 px-8 lg:px-0">¡Bienvenido! Para empezar a jugar, iniciá sesión con tu cuenta. Si no tenés una, podés crearla y comenzar a jugar.</p>
             <div class="flex justify-center items-center my-4">
                 <button type="button" class="mx-6 text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-lg px-5 py-2.5 text-center mr-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800">
                     <a href="login/list">Iniciar sesión</a>
@@ -19,3 +18,4 @@
         </div>
     </div>
 </div>
+{{> footer}}
