--- a/view/faltaConfirmarMail_view.mustache
+++ b/view/faltaConfirmarMail_view.mustache
@@ -4,9 +4,16 @@
         <div class="w-full h-auto hidden lg:block lg:w-1/2 bg-cover rounded-lg lg:rounded-r-none"
              style="background-image: url('https://cdn.aarp.net/content/dam/aarp/health/healthy-living/2022/04/1140-paper-word-bubbles-question-marks-esp.jpg')">
         </div>
-        <div class="w-full lg:w-1/2 bg-white rounded-lg lg:rounded-l-none py-24 px-12 flex flex-col justify-center items-center">
-            <h3 class="font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase my-6">Tenés que verificar tu email para poder jugar a Quiz Time</h3>
-            <p class="text-lg my-6">¡Te enviamos un correo electrónico a <span class="font-bold">{{.}}</span> para confirmar tu cuenta!</p>
+        <div class="w-full bg-white rounded-lg lg:rounded-l-none p-12">
+            <div class="w-1/4">
+                <button type="button" class="w-64 mx-6 text-blue-700 hover:text-white border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-lg px-5 py-2.5 text-center mr-2 mb-2 dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-500 dark:focus:ring-blue-800">
+                    <a href="cerrarSesion">Cerrar sesión</a>
+                </button>
+            </div>
+            <div class="w-full bg-white rounded-lg lg:rounded-l-none py-24 px-12 flex flex-col justify-center items-center">
+                <h3 class="font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase my-6">Tenés que verificar tu email para poder jugar a Quiz Time</h3>
+                <p class="text-lg my-6">¡Te enviamos un correo electrónico a <span class="font-bold">{{usuario.email}}</span> para confirmar tu cuenta!</p>
+            </div>
         </div>
     </div>
 </div>
