--- a/view/login_view.mustache
+++ b/view/login_view.mustache
@@ -30,17 +30,17 @@
                         Iniciar sesión
                     </button>
                 </div>
-                <hr class="mb-4 border-t"/>
-                <div class="text-center">
-                    <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="/tpfinal/formregistro/list">
-                        ¿No tenés una cuenta? Registrate
-                    </a>
-                </div>
                 {{#msj}}
                     <span class="text-sm text-center bg-red-500 text-white px-4 py-2 rounded">
                         el usuario o contraseña es incorrecto
                     </span>
                 {{/msj}}
+                <hr class="my-6 border-t"/>
+                <div class="text-center">
+                    <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="/tpfinal/formregistro/list">
+                        ¿No tenés una cuenta? Registrate
+                    </a>
+                </div>
             </form>
         </div>
     </div>
