Mensajes de error en los formularios de registro e inicio de sesión

--- a/view/login_view.mustache
+++ b/view/login_view.mustache
@@ -13,16 +13,20 @@
                         Nombre de usuario
                     </label>
                     <input type="text" id="username" name="username"
-                           class="w-full p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline"
+                           class="w-full mb-3 p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline"
                            placeholder="Username"/>
+                    <div class="w-full"><span class="text-sm bg-red-200 text-red-800">{{errorUsername}}</span></div>
+                    <div class="w-full"><span class="text-sm bg-red-200 text-red-800">{{errorNombreUsuario}}</span></div>
                 </div>
                 <div class="mb-4">
                     <label class="block mb-2 text-sm font-bold" for="password">
                         Contraseña
                     </label>
                     <input type="password" id="password" name="password"
-                           class="w-full p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline"
+                           class="w-full mb-3 p-3 text-md border rounded shadow focus:outline-none focus:shadow-outline"
                            placeholder="***********"/>
+                    <div class="w-full"><span class="text-sm bg-red-200 text-red-800">{{errorContrasena}}</span></div>
+                    <div class="w-full"><span class="text-sm bg-red-200 text-red-800">{{errorCredenciales}}</span></div>
                 </div>
                 <div class="mb-4">
                     <button class="w-full p-3 font-bold text-white bg-indigo-600 rounded-full focus:outline-none"
@@ -30,11 +34,6 @@
                         Iniciar sesión
                     </button>
                 </div>
-                {{#msj}}
-                    <span class="text-sm text-center bg-red-500 text-white px-4 py-2 rounded">
-                        el usuario o contraseña es incorrecto
-                    </span>
-                {{/msj}}
                 <hr class="my-6 border-t"/>
                 <div class="text-center">
                     <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="/tpfinal/formregistro/list">
