--- a/view/formRegistro_view.mustache
+++ b/view/formRegistro_view.mustache
@@ -4,100 +4,106 @@
 <!-- Container -->
 <div class="flex items-center justify-center h-screen">
         <!-- Row -->
-        <div class="flex w-full md:w-3/4 2xl:w-1/2">
+        <div class="flex w-full md:w-3/4 xl:w-3/5">
             <!-- Col -->
             <div
                     class="w-full h-auto bg-gray-400 hidden lg:block lg:w-5/12 bg-cover rounded-l-lg"
                     style="background-image: url('https://cdn.aarp.net/content/dam/aarp/health/healthy-living/2022/04/1140-paper-word-bubbles-question-marks-esp.jpg')"
             ></div>
             <!-- Col -->
-            <div class="w-full lg:w-7/12 bg-white 2xl:p-6 rounded-lg lg:rounded-l-none">
+            <div class="w-full lg:w-7/12 bg-white rounded-lg lg:rounded-l-none">
                 <h3 class="p-3 font-bold text-3xl text-indigo-700 text-center tracking-widest uppercase">¡Creá una cuenta!</h3>
-                <form class="px-8 2xl:p-10 mb-2 bg-white rounded" id="form-registro"
+                <form class="px-6 mb-2 bg-white rounded" id="form-registro"
                       action="registrar"
                       method="POST"
                       enctype="multipart/form-data">
-                    <div class="mb-2 md:flex md:justify-between">
+                    <div class="mb-2 md:flex md:justify-center">
                         <div class="mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="nombre">
                                 Nombre
                             </label>
                             <input
-                                    class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                    class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                     id="nombre" name="nombre"
                                     type="text"
                                     placeholder="Nombre"
                             />
+                            <span class="text-sm bg-red-200 text-red-800">{{errorNombre}}</span>
                         </div>
                         <div class="md:ml-2">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="apellido">
                                 Apellido
                             </label>
                             <input
-                                    class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                    class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                     id="apellido" name="apellido"
                                     type="text"
                                     placeholder="Apellido"
                             />
+                            <span class="text-sm bg-red-200 text-red-800">{{errorApellido}}</span>
                         </div>
                     </div>
 
 
-                    <div class="mb-2 md:flex md:justify-between">
-                        <div class="mb-2 md:mr-2 md:mb-0">
+                    <div class="mb-2 md:flex md:justify-center">
+                        <div class="w-1/2 mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="username">
                                 Nombre de Usuario
                             </label>
                             <input
-                                    class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                    class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                     id="username" name="username"
                                     type="text"
                                     placeholder="Nombre de usuario"
                             />
+                            <span class="text-sm bg-red-200 text-red-800">{{errorUsername}}</span>
                         </div>
-                        <div class="md:ml-2">
+                        <div class="w-1/2 md:ml-2">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="localidad">
                                 País y Ciudad
                             </label>
                             <input
-                                    class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                    class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                     id="localidad" name="localidad"
                                     type="text"
                                     placeholder="Pais y ciudad"
 
                             />
+                            <span class="text-sm bg-red-200 text-red-800">{{errorPaisCiudad}}</span>
                         </div>
                     </div>
 
 
-                    <div class="mb-2 md:flex md:justify-between">
-                        <div class="mb-2 md:mr-2 md:mb-0">
+                    <div class="mb-2 md:flex md:justify-center">
+                        <div class="w-1/2 mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="sexo">
                                 Sexo
                             </label>
                             <input
-                                    class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                    class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                     id="sexo" name="sexo"
                                     type="text"
                                     placeholder="Sexo"
                             />
+                            <span class="text-sm bg-red-200 text-red-800">{{errorSexo}}</span>
                         </div>
-                        <div class="md:ml-2">
+                        <div class="w-1/2 md:ml-2">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="fnacimiento">
                                 Año de nacimiento
                             </label>
                             <input
-                                    class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                    class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
                                     id="fnacimiento" name="fnacimiento"
                                     type="number"
                                     placeholder="Año de Nacimiento"
 
                             />
+                            <span class="text-sm bg-red-200 text-red-800">{{errorAnoNacimiento}}</span>
                         </div>
                     </div>
 
 
-                    <div class="mb-2">
+                    <div class="w-full mb-2">
                         <label class="block mb-2 text-sm font-bold text-gray-700" for="email">
                             Email
                         </label>
@@ -107,9 +113,10 @@
                                 type="email"
                                 placeholder="Email"
                         />
+                        <span class="text-sm bg-red-200 text-red-800">{{errorEmail}}</span>
                     </div>
-                    <div class="mb-2 md:flex md:justify-between">
-                        <div class="mb-2 md:mr-2 md:mb-0">
+                    <div class="mb-2 md:flex md:justify-center">
+                        <div class="w-1/2 mb-2 md:mr-2 md:mb-0">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="password">
                                 Contraseña
                             </label>
@@ -119,9 +126,9 @@
                                     type="password"
                                     placeholder="******************"
                             />
-
+                            <span class="text-sm bg-red-200 text-red-800">{{errorContrasena}}</span>
                         </div>
-                        <div class="md:ml-2">
+                        <div class="w-1/2 md:ml-2">
                             <label class="block mb-2 text-sm font-bold text-gray-700" for="cpassword">
                                 Repetir contraseña
                             </label>
@@ -131,13 +138,14 @@
                                     type="password"
                                     placeholder="******************"
                             />
+                            <span class="text-sm bg-red-200 text-red-800">{{errorRepetirContrasena}}</span>
                         </div>
                     </div>
 
 
                     <div class="flex h-screen:40vh justify-center items-center">
 
-                        <div class="flex items-center shadow-md space-x-6 bg-white p-3 rounded-md">
+                        <div class="flex items-center shadow-md space-x-6 bg-white p-3 mb-3 rounded-md">
                             <div class="shrink-0">
                                 <img class="h-16 w-16 object-cover rounded-full"
                                      src="https://ik.imagekit.io/ktdjfymfk/pexels-pixabay-164595__2__tD_vGRYs2.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1654163121780"
@@ -145,6 +153,7 @@
                             </div>
                             <label class="block">
                                 <span class="sr-only">Choose profile photo</span>
+                            </label>
                                 <input type="file" name="fotoPerfil" class="block w-full text-sm text-slate-500
         file:mr-4 file:py-2 file:px-4
         file:rounded-full file:border-0
@@ -152,12 +161,9 @@
         file:bg-violet-50 file:text-violet-700
         hover:file:bg-violet-100
       "/>
-                            </label>
                         </div>
-
                     </div>
-
-
+                    <span class="text-sm bg-red-200 text-red-800">{{errorFotoPerfil}}</span>
                     <div class="text-center">
                         <button
                                 class="w-full my-2 px-4 py-2 font-bold text-white bg-blue-500 rounded-full hover:bg-blue-700 focus:outline-none focus:shadow-outline"
